			ROX-Session
			A very simple session manager
			by Thomas Leonard

TODO: Never overwrite .xsession.old

10-Apr-2004
~~~~~~~~~~~
Start a session D-BUS daemon running on login, if one isn't running already.
Added 'Session Settings...' to app menu (uses dbus to send the request to
the master ROX-Session process).

05-Apr-2004
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).

03-Apr-2004
~~~~~~~~~~~
Allow Styles to be read from ~/Choices so the user can customize it
to match their theme (Stephen Watson).

19-Mar-2004
~~~~~~~~~~~
Changed the icon to a language-neutral one, based on fire exit signs (Stephen
Watson).

11-Feb-2004
~~~~~~~~~~~
Added a hint about where to install fonts.

19-Dec-2003
~~~~~~~~~~~
Added note about selecting 'Default' on the login screen.

24-Nov-2003
~~~~~~~~~~~
Updated Russian translation (Vladimir Popov).

21-Nov-2003
~~~~~~~~~~~
Added Lithuanian translation (Rimas Kudelis).

10-Nov-2003
~~~~~~~~~~~
Added AppMenu item to get quick access to the message log (Stephen Watson).

01-Nov-2003
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

26-Oct-2003
~~~~~~~~~~~
Use apsymbols.h (from autopackage.org) if possible for binary compatibility
with older glibc versions. Use g_ascii_* functions instead of the ctypes ones
for the same reason.

12-Oct-2003 (Release 0.1.21)
~~~~~~~~~~~
Run ROX-Filer via Zero Install, if possible. Also, try to get the MIME database
that way.

05-Oct-2003
~~~~~~~~~~~
Added Spanish translation (Marcelo Ramos).

26-Aug-2003
~~~~~~~~~~~
Added option to set when to switch to log window mode.
Bugfix: Reverting the theme caused a crash.

21-Jul-2003
~~~~~~~~~~~
Updated italian translation, added italian guide (Yuri Bongiorno)

04-Jul-2003
~~~~~~~~~~~
Updated italian translation: AppInfo.xml, Help/Guide/AppInfo.xml
and src/po/it.po (Yuri Bongiorno)

19-Jun-2003 (Release 0.1.20)
~~~~~~~~~~~
Make Ctrl-U work again (GTK+-2 broke it).

18-Jun-2003
~~~~~~~~~~~