@@ -8,7 +8,16 @@
 #ifndef _DBUS_H
 #define _DBUS_H
 
+#define DBUS_API_SUBJECT_TO_CHANGE
+#include <dbus/dbus.h>
+#include <dbus/dbus-glib.h>
+
+#define ROX_SESSION_ERROR "net.sf.rox.Session.Error"
+
+typedef DBusMessage *(*MessageHandler)(DBusMessage *message, DBusError *error);
+
 /* Prototypes */
 void dbus_init(void);
+gboolean register_object_path(const char **path, MessageHandler handler);
 
 #endif /* _DBUS_H */
